fix select on mobile

--- a/common/components/assemblee/deputeList/DeputeRanking.scss
+++ b/common/components/assemblee/deputeList/DeputeRanking.scss
@@ -29,6 +29,7 @@
     > div:not(:first-child) {
       max-height: 38px;
       margin-bottom: 10px;
+      overflow: visible;
     }
   }
 
