--- a/common/components/assemblee/deputeList/DeputeSearch.scss
+++ b/common/components/assemblee/deputeList/DeputeSearch.scss
@@ -23,6 +23,7 @@
   }
 
   .displayFilters > div {
+    overflow: visible;
     margin-bottom: 10px;
     max-height: 38px;
   }
